<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.InicioSesionActivity">

    <EditText
        android:id="@+id/etNombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="@dimen/iconos_padding"
        android:hint="@string/et_nombre_usuario"
        android:layout_margin="@dimen/controles_margen"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <EditText
        android:id="@+id/etContraseniaUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="@dimen/iconos_padding"
        android:hint="@string/et_contrasenia_usuario"
        android:layout_margin="@dimen/controles_margen"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombreUsuario" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_login"
        android:text="@string/btn_iniciar_sesion"
        android:layout_margin="@dimen/controles_margen"
        android:backgroundTint="@color/color_fic"
        android:drawableTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContraseniaUsuario" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="@dimen/tamanio_imagen"
        android:layout_height="@dimen/tamanio_imagen"
        android:src="@drawable/logo_fic_completo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>