<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TableroAlumnoActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPromedioGeneralAlumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/elevacion_card"
        app:cardCornerRadius="@dimen/radius_card"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="@dimen/elevacion_max_card"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TextView
            android:id="@+id/txtPromedioGeneralAlumno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/texto_mediano"
            android:textStyle="bold"
            android:layout_margin="@dimen/controles_margen"
            android:layout_gravity="bottom|end"
            />

        <TextView
            android:id="@+id/txtPromedioGeneralAlumnoDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_promedio_general"
            android:layout_gravity="start|center"
            android:layout_margin="@dimen/controles_margen"
            android:textSize="@dimen/texto_mediano"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardMateriasAprobadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/radius_card"
        app:cardElevation="@dimen/elevacion_card"
        app:cardMaxElevation="@dimen/elevacion_max_card"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/cardPromedioGeneralAlumno"
        >

        <TextView
            android:id="@+id/txtNumeroMateriasAprobadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/controles_margen"
            android:textSize="@dimen/texto_mediano"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtNumeroMateriasAprobadasDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_margin="@dimen/controles_margen"
            android:text="@string/txt_materias_aprobadas"
            android:textSize="@dimen/texto_mediano"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
             />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardMateriasReprobadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/radius_card"
        app:cardElevation="@dimen/elevacion_card"
        app:cardMaxElevation="@dimen/elevacion_max_card"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/cardMateriasAprobadas"
        >

        <TextView
            android:id="@+id/txtNumeroMateriasReprobadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/controles_margen"
            android:textSize="@dimen/texto_mediano"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtNumeroMateriasReprobadasDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_margin="@dimen/controles_margen"
            android:text="@string/txt_materias_reprobadas"
            android:textSize="@dimen/texto_mediano"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
             />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCalificacionCurso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_calificacion_alumno"
        android:layout_margin="@dimen/controles_margen"
        android:drawableStart="@drawable/ic_lista"
        android:drawableTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardMateriasReprobadas"
        android:backgroundTint="@color/color_fic"
        />

</androidx.constraintlayout.widget.ConstraintLayout>